fix invalid merge conflict
